[package]
name = "osu-pp-rebalance"
version = "0.1.0"
authors = ["ekisu <ramonzitosdesorte@hotmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"  

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "tera_templates", "json", "serve"]

